@@ -28,7 +28,11 @@ enum wxSystemFont
     wxSYS_DEVICE_DEFAULT_FONT,
     wxSYS_DEFAULT_PALETTE,
     wxSYS_SYSTEM_FIXED_FONT,
-    wxSYS_DEFAULT_GUI_FONT
+    wxSYS_DEFAULT_GUI_FONT,
+    wxSYS_ICONTITLE_FONT
+#ifndef __WXMSW__
+    = wxSYS_DEFAULT_GUI_FONT
+#endif
 };
 
 // possible values for wxSystemSettings::GetColour() parameter
